# pam_krb5

./: COPYING.LIB  Makefile.am  NEWS  README  README.md  autogen  configure.ac  pam_krb5.spec  zanata.xml
po/: ar.po  as.po  ast.po  bal.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  kk.po  kn.po  ko.po  ks.po  lt.po  lv.po  mai.po  (+31 more)
src/: Makefile.am  acct.c  afs5log.c  auth.c  cchelper.c  cchelper.h  getpw.c  init.c  initopts.c  kuserok.c  logpam.c  logstdio.c  map.c  minikafs.c  mkdir.c  mkdir.h  options.c  options.h  pam_krb5.5.in  pam_krb5.8.in  pam_krb5_cchelper.8.in  pam_krb5_cchelper.c  pam_krb5_storetmp.c  pam_newpag.c  password.c  perms.c  prompter.c  session.c  shmem.c  sly.c  stash.c  stash.h  storetmp.c  tokens.c  userinfo.c  uuauth.c  v5.c  v5.h  vfy.c
tests/: Makefile.am  run-tests.sh  testenv.sh.in
tests/011-pkinit/: run.sh  stdout.expected  stdout.expected.2
tests/012-armor/: run.sh  stdout.expected
tests/018-options-ccpattern/: run.sh  stdout.expected
tests/021-options-ccpattern-keyring/: run.sh
tests/022-shmem/: run.sh  stdout.expected
tests/023-update/: run.sh  stdout.expected
tests/024-shmem-external/: run.sh
tests/025-external/: run.sh  stdout.expected
tests/026-options-ccpattern-global/: run.sh  stdout.expected
tests/tools/: Makefile.am  grepcommencing.sh  grepenv.sh  grepstarting.sh  kd_tests.c  klist_i.c  make-certs.sh  meanwhile.c  pam_harness.c
(+5 files in other folders)
